--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <a href="about.html">about</a>
     </p>
     <hr>
-    <div>copyright &copy;2020 by ridho ramadhani</div>
+    <div>copyright &copy;2020 by tirta agung</div>
 </body>
 </html>
